7 July 2020: Wouter
	- Fix #259: Fix unbound-checkconf does not check view existence.
	  unbound-checkconf checks access-control-view, access-control-tags,
	  access-control-tag-actions and access-control-tag-datas.
	- Fix offset of error printout for access-control-tag-datas.

6 July 2020: Wouter
	- run_vm cleanup better and removes trailing slash on single argument.

29 June 2020: Wouter
	- Move reply list clean for serve expired mesh callback to after
	  the reply is sent, so that script callbacks have reply_info.
	- Also move reply list clean for mesh callbacks to the scrip callback
	  can see the reply_info.
	- Fix for mesh accounting if the reply list already empty to begin
	  with.
	- Fix for mesh accounting when rpz decides to drop a reply with a
	  tcp stream waiting for it.
	- Review fix for number of detached states due to use of variable
	  after end of loop.
	- Fix tcp req info drop due to size call into mesh accounting
	  removal of mesh state during mesh send reply.

24 June 2020: Wouter
	- iana portlist updated.
	- doxygen file comments for dynlibmodule.

17 June 2020: Wouter
	- Fix default explanation in man page for qname-minimisation-strict.
	- Fix display of event loop method with libev.

8 June 2020: Wouter
	- Mention tls name possible when tls is enabled for stub-addr in the
	  man page.

27 May 2020: George
	- Merge PR #241 by Robert Edmonds: contrib/libunbound.pc.in: Do not use
	  "Requires:".

25 May 2020: George
	- Update contrib/aaaa-filter-iterator.patch for the recent
	  generate_sub_request() change and to apply cleanly.

21 May 2020: George
	- Fix for integer overflow when printing RDF_TYPE_TIME.

19 May 2020: Wouter
	- CVE-2020-12662 Unbound can be tricked into amplifying an incoming
	  query into a large number of queries directed to a target.
	- CVE-2020-12663 Malformed answers from upstream name servers can be
	  used to make Unbound unresponsive.
	- Release 1.10.1 is 1.10.0 with fixes, code repository continues,