@@ -3,6 +3,7 @@
 	  unbound-checkconf checks access-control-view, access-control-tags,
 	  access-control-tag-actions and access-control-tag-datas.
 	- Fix offset of error printout for access-control-tag-datas.
+	- Review fixes for checkconf #259 change.
 
 6 July 2020: Wouter
 	- run_vm cleanup better and removes trailing slash on single argument.
